--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,17 @@
-/* .required:after { 
+
+.reg-button {
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.list-title {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 20px;
+}
+
+.form-group.required label:after {
     content:"*";
-    color: red;
- } */
+    color:red;
+}
