--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,17 @@
     content:"*";
     color:red;
 }
+
+:-moz-ui-invalid:not(output) {
+    box-shadow: none;
+}
+
+.check-form input:invalid, .check-form select:invalid {
+    box-shadow: 0 0 5px #F00;
+}
+
+@media screen and (min-width: 600px) {
+    .container {
+        width: 60% !important;
+    }
+  }
